# MOC

./: Makefile.am  README.md
include/: Makefile.am  layouts.h  moc.h  moc_common.h
src/: Makefile.am  moc.c
test/: CMD.sh  CMD2.sh  mpi_omp_hello.c  simple_test.c
